703-create-CustomClaim - simplify auth (#726)
* chore(backend): add new JWT LOGIC

* chore(backend): change @AuthPrincipal to EssenciumJWTUserDetails

* chore(backend): remove implemented Class

* chore(backend): fix tests - format

* chore(backend): fix tests - add aspect

* chore(backend): fix Unit test - logged in

* chore(backend): fix change To EsseniucmUserImpl

* chore(backend): change To EsseniucmUserImpl

* chore(backend): add otherclaims

* chore(backend): add locale to Claims

* chore(backend): fix tests - adjust Aspect

* chore(backend): remove RightClaim - change to ROLE_RIGHT

* chore(backend): add new EssenciumDetailsMethod - addionalClaims

* chore(backend): change to seprate Role/rights

* chore(backend): fix Integration TEsts - add Custom exception + change Apsect

* chore(backend): add check user attributes not check

* chore(backend): rename Method

* chore(backend): add Unit Tests

* add Tests + clean logic

* chore(backend): update logging configuration for UserTokenInvalidationAspect

* chore(backend): fix Unit Tests

* refactor(backend): simplify token invalidation logic and enhance tests

* refactor(tests): remove redundant test for token invalidation on ignored methods

* refactor(backend): rename JWTUSER to AUTHUSER for consistency in user authentication handling

* refactor(backend): simplify pointcut expression in UserTokenInvalidationAspect

* refactor(docs): update migration guide for AUTHUSER changes and custom claims handling

* refactor(changelog): update to version 2.12.0 with migration to EssenciumUserDetailsImpl and support for custom claims

* refactor(changelog): simplify migration notes for EssenciumUserDetailsImpl and custom claims support

* chore(backend): simplify token invalidation logic by introducing UserStateService

* chore(backend): simplify session token invalidation by integrating UserStateService

* chore: update version to 2.12.1 and import Map in JwtTokenService

* chore: update version to 2.12.1 in pom.xml

* c